<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent" android:layout_height="fill_parent"
   android:padding="10dp" android:background="#FFFFFF">

   <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent"
      android:layout_gravity="center" android:background="#FFFFFF">

      <TextView android:id="@+id/about_content"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="top" />

      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about_version" android:layout_gravity="center" android:textColor="#00FF00" />
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/about_author_email"
         android:layout_gravity="center" android:textColor="#00FF00"  />
      <TextView android:id="@+id/project_url" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/about_project_url"
         android:layout_gravity="center" android:textColor="#00FF00" />

     <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent"
      android:layout_gravity="center" android:background="#FFFFFF">
      <Button android:text=" Close " android:id="@+id/about_ok"
         android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
         android:background="@drawable/round_button" android:padding="5dp"
         android:layout_gravity="center"/>
      <Button android:text=" Go AD Free " android:id="@+id/about_up"
         android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
         android:background="@drawable/round_button" android:padding="5dp"
         android:layout_gravity="center"/>
   </LinearLayout>
   </LinearLayout>
</ScrollView> 
