<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border1"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FF0000" />
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#3300FF"
        android:text="Day Details"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FF0000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" >

        <ScrollView
            android:id="@+id/scrollViewx"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4.5" >

            <TextView
                android:id="@+id/puTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#0000A0" />
        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fav"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:textColor="#0000A0" />

            <TextView
                android:id="@+id/del"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableLeft="@drawable/delete"
                android:focusable="true"
                android:gravity="center_vertical"
                android:textColor="#0000A0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="fill"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:visibility="gone" >

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:ellipsize="end"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/titleButon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:padding="1dp"
            android:text="Add"
            android:textColor="#000080" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_height="1dip"
        android:background="#FF0000" />
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#3300FF"
        android:textStyle="bold"
        android:text="Record/Play Voice Note"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FF0000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.5"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playSaved"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_ok"
            android:drawablePadding="5dip"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/play_msg"
            android:textColor="#0000A0" />

        <TextView
            android:id="@+id/recordNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_info"
            android:drawablePadding="5dip"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/msg_new"
            android:textColor="#0000A0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/savePop"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/save_pop"
            android:textColor="#FF0000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/deleteRec"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/delete_rec"
            android:textColor="#FF0000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cancelPop"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="25dp"
            android:text="@string/close_pop"
            android:textColor="#FF0000"
            android:textSize="15sp" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FF0000" />

</LinearLayout>
